@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2007-2021 Crafter Software Corporation. All Rights Reserved.
+ * Copyright (C) 2007-2022 Crafter Software Corporation. All Rights Reserved.
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 3 as published by
@@ -25,18 +25,18 @@ import org.craftercms.commons.crypto.CryptoException;
 import org.craftercms.commons.crypto.TextEncryptor;
 import org.craftercms.studio.api.v1.constant.GitRepositories;
 import org.craftercms.studio.api.v1.exception.ServiceLayerException;
+import org.craftercms.studio.api.v1.exception.repository.InvalidRemoteRepositoryCredentialsException;
 import org.craftercms.studio.api.v1.exception.SiteNotFoundException;
 import org.craftercms.studio.api.v1.exception.repository.InvalidRemoteUrlException;
 import org.craftercms.studio.api.v1.exception.repository.RemoteAlreadyExistsException;
 import org.craftercms.studio.api.v1.exception.repository.RemoteNotRemovableException;
+import org.craftercms.studio.api.v1.exception.repository.RemoteRepositoryNotFoundException;
 import org.craftercms.studio.api.v1.exception.security.UserNotFoundException;
 import org.craftercms.studio.api.v1.log.Logger;
 import org.craftercms.studio.api.v1.log.LoggerFactory;
-import org.craftercms.studio.api.v1.repository.ContentRepository;
 import org.craftercms.studio.api.v1.service.GeneralLockService;
 import org.craftercms.studio.api.v1.service.security.SecurityService;
 import org.craftercms.studio.api.v1.service.site.SiteService;
-import org.craftercms.studio.api.v2.annotation.RetryingOperation;
 import org.craftercms.studio.api.v2.dal.ClusterDAO;
 import org.craftercms.studio.api.v2.dal.ClusterMember;
 import org.craftercms.studio.api.v2.dal.DiffConflictedFile;
@@ -45,13 +45,17 @@ import org.craftercms.studio.api.v2.dal.RemoteRepository;
 import org.craftercms.studio.api.v2.dal.RemoteRepositoryDAO;
 import org.craftercms.studio.api.v2.dal.RemoteRepositoryInfo;
 import org.craftercms.studio.api.v2.dal.RepositoryStatus;
+import org.craftercms.studio.api.v2.dal.RetryingDatabaseOperationFacade;
 import org.craftercms.studio.api.v2.dal.User;
+import org.craftercms.studio.api.v2.repository.ContentRepository;
 import org.craftercms.studio.api.v2.repository.RetryingRepositoryOperationFacade;
 import org.craftercms.studio.api.v2.service.notification.NotificationService;
+import org.craftercms.studio.api.v2.service.repository.MergeResult;
 import org.craftercms.studio.api.v2.service.repository.internal.RepositoryManagementServiceInternal;
 import org.craftercms.studio.api.v2.service.security.internal.UserServiceInternal;
 import org.craftercms.studio.api.v2.utils.GitRepositoryHelper;
 import org.craftercms.studio.api.v2.utils.StudioConfiguration;
+import org.craftercms.studio.impl.v2.utils.GitUtils;
 import org.eclipse.jgit.api.AddCommand;
 import org.eclipse.jgit.api.CheckoutCommand;
 import org.eclipse.jgit.api.CommitCommand;
@@ -65,12 +69,16 @@ import org.eclipse.jgit.api.PullCommand;
 import org.eclipse.jgit.api.PullResult;
 import org.eclipse.jgit.api.PushCommand;
 import org.eclipse.jgit.api.RemoteAddCommand;
+import org.eclipse.jgit.api.RemoteListCommand;
 import org.eclipse.jgit.api.RemoteRemoveCommand;
 import org.eclipse.jgit.api.ResetCommand;
 import org.eclipse.jgit.api.Status;
+import org.eclipse.jgit.api.StatusCommand;
 import org.eclipse.jgit.api.errors.GitAPIException;
 import org.eclipse.jgit.api.errors.InvalidRemoteException;
 import org.eclipse.jgit.api.errors.JGitInternalException;
+import org.eclipse.jgit.api.errors.TransportException;
+import org.eclipse.jgit.errors.NoRemoteRepositoryException;
 import org.eclipse.jgit.errors.CorruptObjectException;
 import org.eclipse.jgit.lib.Config;
 import org.eclipse.jgit.lib.Constants;
@@ -100,18 +108,19 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Queue;
 import java.util.Set;
 import java.util.UUID;
+
+import static java.nio.charset.StandardCharsets.UTF_8;
+import static org.apache.commons.collections4.CollectionUtils.isNotEmpty;
 import static org.craftercms.studio.api.v1.constant.GitRepositories.SANDBOX;
 import static org.craftercms.studio.api.v1.constant.StudioConstants.PATTERN_SITE;
 import static org.craftercms.studio.api.v1.constant.StudioConstants.SITE_SANDBOX_REPOSITORY_GIT_LOCK;
@@ -134,54 +143,26 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
     private NotificationService notificationService;
     private SecurityService securityService;
     private UserServiceInternal userServiceInternal;
-    private ContentRepository contentRepository;
+    private org.craftercms.studio.api.v1.repository.ContentRepository contentRepository;
     private TextEncryptor encryptor;
     private ClusterDAO clusterDao;
     private GeneralLockService generalLockService;
     private SiteService siteService;
-    private org.craftercms.studio.api.v2.repository.ContentRepository contentRepositoryV2;
-    private RetryingRepositoryOperationFacade retryingRepositoryOperationFacade;
+    private GitRepositoryHelper gitRepositoryHelper;
+    private ContentRepository contentRepositoryV2;
     private int batchSizeGitLog = 1000;
-
-    public RepositoryManagementServiceInternalImpl(RemoteRepositoryDAO remoteRepositoryDao,
-                                                   StudioConfiguration studioConfiguration,
-                                                   NotificationService notificationService,
-                                                   SecurityService securityService,
-                                                   UserServiceInternal userServiceInternal,
-                                                   ContentRepository contentRepository,
-                                                   TextEncryptor encryptor,
-                                                   ClusterDAO clusterDao,
-                                                   GeneralLockService generalLockService,
-                                                   SiteService siteService,
-                                                   org.craftercms.studio.api.v2.repository.ContentRepository contentRepositoryV2,
-                                                   RetryingRepositoryOperationFacade retryingRepositoryOperationFacade,
-                                                   int batchSizeGitLog) {
-        this.remoteRepositoryDao = remoteRepositoryDao;
-        this.studioConfiguration = studioConfiguration;
-        this.notificationService = notificationService;
-        this.securityService = securityService;
-        this.userServiceInternal = userServiceInternal;
-        this.contentRepository = contentRepository;
-        this.encryptor = encryptor;
-        this.clusterDao = clusterDao;
-        this.generalLockService = generalLockService;
-        this.siteService = siteService;
-        this.contentRepositoryV2 = contentRepositoryV2;
-        this.retryingRepositoryOperationFacade = retryingRepositoryOperationFacade;
-        this.batchSizeGitLog = batchSizeGitLog;
-    }
+    private RetryingRepositoryOperationFacade retryingRepositoryOperationFacade;
+    private RetryingDatabaseOperationFacade retryingDatabaseOperationFacade;
 
     @Override
     public boolean addRemote(String siteId, RemoteRepository remoteRepository)
-            throws ServiceLayerException, InvalidRemoteUrlException {
+            throws ServiceLayerException, InvalidRemoteUrlException, RemoteRepositoryNotFoundException {
         boolean isValid = false;
         String gitLockKey = SITE_SANDBOX_REPOSITORY_GIT_LOCK.replaceAll(PATTERN_SITE, siteId);
         generalLockService.lock(gitLockKey);
         try {
             logger.debug("Add remote " + remoteRepository.getRemoteName() + " to the sandbox repo for the site " + siteId);
-            GitRepositoryHelper helper = GitRepositoryHelper.getHelper(studioConfiguration, securityService,
-                    userServiceInternal, encryptor, generalLockService, retryingRepositoryOperationFacade);
-            Repository repo = helper.getRepository(siteId, SANDBOX);
+            Repository repo = gitRepositoryHelper.getRepository(siteId, SANDBOX);
             try (Git git = new Git(repo)) {
 
                 Config storedConfig = repo.getConfig();
@@ -197,7 +178,7 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
                 retryingRepositoryOperationFacade.call(remoteAddCommand);
 
                 try {
-                    isValid = helper.isRemoteValid(git, remoteRepository.getRemoteName(),
+                    isValid = gitRepositoryHelper.isRemoteValid(git, remoteRepository.getRemoteName(),
                             remoteRepository.getAuthenticationType(), remoteRepository.getRemoteUsername(),
                             remoteRepository.getRemotePassword(), remoteRepository.getRemoteToken(),
                             remoteRepository.getRemotePrivateKey());
@@ -207,18 +188,18 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
                         remoteRemoveCommand.setRemoteName(remoteRepository.getRemoteName());
                         retryingRepositoryOperationFacade.call(remoteRemoveCommand);
 
-                        List<Ref> resultRemoteBranches = git.branchList()
-                                .setListMode(ListBranchCommand.ListMode.REMOTE)
-                                .call();
+                        ListBranchCommand listBranchCommand = git.branchList()
+                                .setListMode(ListBranchCommand.ListMode.REMOTE);
+                        List<Ref> resultRemoteBranches = retryingRepositoryOperationFacade.call(listBranchCommand);
 
-                        List<String> branchesToDelete = new ArrayList<String>();
+                        List<String> branchesToDelete = new ArrayList<>();
                         for (Ref remoteBranchRef : resultRemoteBranches) {
                             if (remoteBranchRef.getName().startsWith(Constants.R_REMOTES +
                                     remoteRepository.getRemoteName())) {
                                 branchesToDelete.add(remoteBranchRef.getName());
                             }
                         }
-                        if (CollectionUtils.isNotEmpty(branchesToDelete)) {
+                        if (isNotEmpty(branchesToDelete)) {
                             DeleteBranchCommand delBranch = git.branchDelete();
                             String[] array = new String[branchesToDelete.size()];
                             delBranch.setBranchNames(branchesToDelete.toArray(array));
@@ -232,10 +213,18 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
                 logger.error("Remote URL is invalid " + remoteRepository.getRemoteUrl(), e);
                 throw new InvalidRemoteUrlException();
             } catch (GitAPIException | IOException e) {
-                logger.error("Error while adding remote " + remoteRepository.getRemoteName() + " (url: " +
-                        remoteRepository.getRemoteUrl() + ") " + "for site " + siteId, e);
-                throw new ServiceLayerException("Error while adding remote " + remoteRepository.getRemoteName() +
-                        " (url: " + remoteRepository.getRemoteUrl() + ") for site " + siteId, e);
+                if (e.getCause() instanceof NoRemoteRepositoryException) {
+                    logger.error("Remote repository not found " + remoteRepository.getRemoteName() + " (url: " +
+                            remoteRepository.getRemoteUrl() + ") " + "for site " + siteId, e);
+                    throw new RemoteRepositoryNotFoundException("Remote repository not found " +
+                            remoteRepository.getRemoteName() + " (url: " + remoteRepository.getRemoteUrl() +
+                            ") for site " + siteId, e);
+                } else {
+                    logger.error("Error while adding remote " + remoteRepository.getRemoteName() + " (url: " +
+                            remoteRepository.getRemoteUrl() + ") " + "for site " + siteId, e);
+                    throw new ServiceLayerException("Error while adding remote " + remoteRepository.getRemoteName() +
+                            " (url: " + remoteRepository.getRemoteUrl() + ") for site " + siteId, e);
+                }
             }
 
             if (isValid) {
@@ -252,7 +241,7 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
     private void insertRemoteToDb(String siteId, RemoteRepository remoteRepository) throws CryptoException {
         logger.debug("Inserting remote " + remoteRepository.getRemoteName() + " for site " + siteId +
                 " into database.");
-        Map<String, String> params = new HashMap<String, String>();
+        Map<String, String> params = new HashMap<>();
         params.put("siteId", siteId);
         params.put("remoteName", remoteRepository.getRemoteName());
         params.put("remoteUrl", remoteRepository.getRemoteUrl());
@@ -282,27 +271,25 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
         }
 
         logger.debug("Insert site remote record into database");
-        remoteRepositoryDao.insertRemoteRepository(params);
+        retryingDatabaseOperationFacade.insertRemoteRepository(params);
     }
 
     @Override
-    public List<RemoteRepositoryInfo> listRemotes(String siteId, String sandboxBranch)
-            throws ServiceLayerException, CryptoException {
-        List<RemoteRepositoryInfo> res = new ArrayList<RemoteRepositoryInfo>();
-        Map<String, String> unreachableRemotes = new HashMap<String, String>();
-        GitRepositoryHelper helper = GitRepositoryHelper.getHelper(studioConfiguration,securityService,
-                userServiceInternal, encryptor, generalLockService, retryingRepositoryOperationFacade);
-        try (Repository repo = helper.getRepository(siteId, SANDBOX)) {
+    public List<RemoteRepositoryInfo> listRemotes(String siteId, String sandboxBranch) {
+        List<RemoteRepositoryInfo> res = new ArrayList<>();
+        Map<String, String> unreachableRemotes = new HashMap<>();
+        try (Repository repo = gitRepositoryHelper.getRepository(siteId, SANDBOX)) {
             try (Git git = new Git(repo)) {
-                List<RemoteConfig> resultRemotes = git.remoteList().call();
-                if (CollectionUtils.isNotEmpty(resultRemotes)) {
+                RemoteListCommand remoteListCommand = git.remoteList();
+                List<RemoteConfig> resultRemotes = retryingRepositoryOperationFacade.call(remoteListCommand);
+                if (isNotEmpty(resultRemotes)) {
                     for (RemoteConfig conf : resultRemotes) {
-                            try {
-                                fetchRemote(siteId, git, conf);
-                            } catch (Exception e) {
-                                logger.warn("Failed to fetch from remote repository " + conf.getName());
-                                unreachableRemotes.put(conf.getName(), e.getMessage());
-                            }
+                        try {
+                            fetchRemote(siteId, git, conf);
+                        } catch (Exception e) {
+                            logger.warn("Failed to fetch from remote repository " + conf.getName());
+                            unreachableRemotes.put(conf.getName(), e.getMessage());
+                        }
                     }
                     Map<String, List<String>> remoteBranches = getRemoteBranches(git);
                     String sandboxBranchName = sandboxBranch;
@@ -320,13 +307,11 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
 
     private void fetchRemote(String siteId, Git git, RemoteConfig conf)
             throws CryptoException, IOException, ServiceLayerException, GitAPIException {
-        GitRepositoryHelper helper = GitRepositoryHelper.getHelper(studioConfiguration, securityService,
-                userServiceInternal, encryptor, generalLockService, retryingRepositoryOperationFacade);
         RemoteRepository remoteRepository = getRemoteRepository(siteId, conf.getName());
         if (remoteRepository != null) {
             Path tempKey = Files.createTempFile(UUID.randomUUID().toString(), ".tmp");
             FetchCommand fetchCommand = git.fetch().setRemote(conf.getName());
-            fetchCommand = helper.setAuthenticationForCommand(fetchCommand,
+            gitRepositoryHelper.setAuthenticationForCommand(fetchCommand,
                     remoteRepository.getAuthenticationType(), remoteRepository.getRemoteUsername(),
                     remoteRepository.getRemotePassword(), remoteRepository.getRemoteToken(),
                     remoteRepository.getRemotePrivateKey(), tempKey, true);
@@ -335,17 +320,17 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
     }
 
     private RemoteRepository getRemoteRepository(String siteId, String remoteName) {
-        Map<String, String> params = new HashMap<String, String>();
+        Map<String, String> params = new HashMap<>();
         params.put("siteId", siteId);
         params.put("remoteName", remoteName);
         return remoteRepositoryDao.getRemoteRepository(params);
     }
 
     private Map<String, List<String>>  getRemoteBranches(Git git) throws GitAPIException {
-        List<Ref> resultRemoteBranches = git.branchList()
-                .setListMode(ListBranchCommand.ListMode.REMOTE)
-                .call();
-        Map<String, List<String>> remoteBranches = new HashMap<String, List<String>>();
+        ListBranchCommand listBranchCommand = git.branchList()
+                .setListMode(ListBranchCommand.ListMode.REMOTE);
+        List<Ref> resultRemoteBranches = retryingRepositoryOperationFacade.call(listBranchCommand);
+        Map<String, List<String>> remoteBranches = new HashMap<>();
         for (Ref remoteBranchRef : resultRemoteBranches) {
             String branchFullName = remoteBranchRef.getName().replace(Constants.R_REMOTES, "");
             String remotePart = StringUtils.EMPTY;
@@ -357,7 +342,7 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
             }
 
             if (!remoteBranches.containsKey(remotePart)) {
-                remoteBranches.put(remotePart, new ArrayList<String>());
+                remoteBranches.put(remotePart, new ArrayList<>());
             }
             remoteBranches.get(remotePart).add(branchNamePart);
         }
@@ -368,7 +353,7 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
                                                                Map<String, List<String>> remoteBranches,
                                                                Map<String, String> unreachableRemotes,
                                                                String sandboxBranchName) {
-        List<RemoteRepositoryInfo> res = new ArrayList<RemoteRepositoryInfo>();
+        List<RemoteRepositoryInfo> res = new ArrayList<>();
         for (RemoteConfig conf : resultRemotes) {
             RemoteRepositoryInfo rri = new RemoteRepositoryInfo();
             rri.setName(conf.getName());
@@ -378,13 +363,13 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
             }
             List<String> branches = remoteBranches.get(rri.getName());
             if (CollectionUtils.isEmpty(branches)) {
-                branches = new ArrayList<String>();
+                branches = new ArrayList<>();
                 branches.add(sandboxBranchName);
             }
             rri.setBranches(branches);
 
             StringBuilder sbUrl = new StringBuilder();
-            if (CollectionUtils.isNotEmpty(conf.getURIs())) {
+            if (isNotEmpty(conf.getURIs())) {
                 for (int i = 0; i < conf.getURIs().size(); i++) {
                     sbUrl.append(conf.getURIs().get(i).toString());
                     if (i < conf.getURIs().size() - 1) {
@@ -395,7 +380,7 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
             rri.setUrl(sbUrl.toString());
 
             StringBuilder sbFetch = new StringBuilder();
-            if (CollectionUtils.isNotEmpty(conf.getFetchRefSpecs())) {
+            if (isNotEmpty(conf.getFetchRefSpecs())) {
                 for (int i = 0; i < conf.getFetchRefSpecs().size(); i++) {
                     sbFetch.append(conf.getFetchRefSpecs().get(i).toString());
                     if (i < conf.getFetchRefSpecs().size() - 1) {
@@ -406,7 +391,7 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
             rri.setFetch(sbFetch.toString());
 
             StringBuilder sbPushUrl = new StringBuilder();
-            if (CollectionUtils.isNotEmpty(conf.getPushURIs())) {
+            if (isNotEmpty(conf.getPushURIs())) {
                 for (int i = 0; i < conf.getPushURIs().size(); i++) {
                     sbPushUrl.append(conf.getPushURIs().get(i).toString());
                     if (i < conf.getPushURIs().size() - 1) {
@@ -423,25 +408,24 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
     }
 
     @Override
-    public boolean pullFromRemote(String siteId, String remoteName, String remoteBranch, String mergeStrategy)
-            throws InvalidRemoteUrlException, ServiceLayerException, CryptoException {
+    public MergeResult pullFromRemote(String siteId, String remoteName, String remoteBranch, String mergeStrategy)
+            throws InvalidRemoteUrlException, ServiceLayerException, InvalidRemoteRepositoryCredentialsException,
+                    RemoteRepositoryNotFoundException {
         logger.debug("Get remote data from database for remote " + remoteName + " and site " + siteId);
         String gitLockKey = SITE_SANDBOX_REPOSITORY_GIT_LOCK.replaceAll(PATTERN_SITE, siteId);
         RemoteRepository remoteRepository = getRemoteRepository(siteId, remoteName);
         logger.debug("Prepare pull command");
-        GitRepositoryHelper helper = GitRepositoryHelper.getHelper(studioConfiguration, securityService,
-                userServiceInternal, encryptor, generalLockService, retryingRepositoryOperationFacade);
-        Repository repo = helper.getRepository(siteId, SANDBOX);
+        Repository repo = gitRepositoryHelper.getRepository(siteId, SANDBOX);
         generalLockService.lock(gitLockKey);
+        Path tempKey = null;
         try (Git git = new Git(repo)) {
-            PullResult pullResult = null;
             PullCommand pullCommand = git.pull();
             logger.debug("Set remote " + remoteName);
             pullCommand.setRemote(remoteRepository.getRemoteName());
             logger.debug("Set branch to be " + remoteBranch);
             pullCommand.setRemoteBranchName(remoteBranch);
-            Path tempKey = Files.createTempFile(UUID.randomUUID().toString(), ".tmp");
-            pullCommand = helper.setAuthenticationForCommand(pullCommand, remoteRepository.getAuthenticationType(),
+            tempKey = Files.createTempFile(UUID.randomUUID().toString(), ".tmp");
+            gitRepositoryHelper.setAuthenticationForCommand(pullCommand, remoteRepository.getAuthenticationType(),
                     remoteRepository.getRemoteUsername(), remoteRepository.getRemotePassword(),
                     remoteRepository.getRemoteToken(), remoteRepository.getRemotePrivateKey(), tempKey, true);
             switch (mergeStrategy) {
@@ -455,32 +439,21 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
                     break;
             }
             pullCommand.setFastForward(MergeCommand.FastForwardMode.NO_FF);
-            pullResult = retryingRepositoryOperationFacade.call(pullCommand);
+            PullResult pullResult = retryingRepositoryOperationFacade.call(pullCommand);
             String pullResultMessage = pullResult.toString();
             if (StringUtils.isNotEmpty(pullResultMessage)) {
                 logger.info(pullResultMessage);
             }
-            Files.delete(tempKey);
-            if (!pullResult.isSuccessful() && conflictNotificationEnabled()) {
-                List<String> conflictFiles = new ArrayList<String>();
-                if (pullResult.getMergeResult() != null) {
-                    pullResult.getMergeResult().getConflicts().forEach((m, v) -> {
-                        conflictFiles.add(m);
-                    });
-                }
-                notificationService.notifyRepositoryMergeConflict(siteId, conflictFiles, Locale.ENGLISH);
-            }
             if (pullResult.isSuccessful()) {
                 String lastCommitId = contentRepository.getRepoLastCommitId(siteId);
-                contentRepositoryV2.upsertGitLogList(siteId, Arrays.asList(lastCommitId), false, false);
+                contentRepositoryV2.upsertGitLogList(siteId, List.of(lastCommitId), false, false);
 
                 List<String> newMergedCommits = extractCommitIdsFromPullResult(siteId, repo, pullResult);
-                List<String> commitIds = new ArrayList<String>();
-                if (Objects.nonNull(newMergedCommits) && newMergedCommits.size() > 0) {
+                List<String> commitIds = new LinkedList<>();
+                if (isNotEmpty(newMergedCommits)) {
                     logger.debug("Really pulled commits:");
                     int cnt = 0;
-                    for (int i = 0; i < newMergedCommits.size(); i ++) {
-                        String commitId = newMergedCommits.get(i);
+                    for (String commitId : newMergedCommits) {
                         logger.debug(commitId);
                         if (!StringUtils.equals(lastCommitId, commitId)) {
                             commitIds.add(commitId);
@@ -491,17 +464,25 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
                             }
                         }
                     }
-                    if (Objects.nonNull(commitIds) && commitIds.size() > 0) {
+                    if (isNotEmpty(commitIds)) {
                         contentRepositoryV2.upsertGitLogList(siteId, commitIds, true, true);
                     }
                 }
-
                 siteService.updateLastCommitId(siteId, lastCommitId);
+                return MergeResult.from(pullResult, newMergedCommits);
+            } else if (conflictNotificationEnabled()) {
+                List<String> conflictFiles = new LinkedList<>();
+                if (pullResult.getMergeResult() != null) {
+                    conflictFiles.addAll(pullResult.getMergeResult().getConflicts().keySet());
+                }
+                notificationService.notifyRepositoryMergeConflict(siteId, conflictFiles);
             }
-            return pullResult != null && pullResult.isSuccessful();
         } catch (InvalidRemoteException e) {
             logger.error("Remote is invalid " + remoteName, e);
             throw new InvalidRemoteUrlException();
+        } catch (TransportException e) {
+            GitUtils.translateException(e, logger, remoteName, remoteRepository.getRemoteUrl(),
+                                        remoteRepository.getRemoteUsername());
         } catch (GitAPIException e) {
             logger.error("Error while pulling from remote " + remoteName + " branch "
                     + remoteBranch + " for site " + siteId, e);
@@ -510,8 +491,56 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
         } catch (CryptoException | IOException e) {
             throw new ServiceLayerException(e);
         } finally {
+            try {
+                if (tempKey != null) {
+                    Files.deleteIfExists(tempKey);
+                }
+            } catch (IOException e) {
+                logger.warn("Error deleting file {0}", tempKey);
+            }
             generalLockService.unlock(gitLockKey);
         }
+
+        return MergeResult.failed();
+    }
+
+    private List<String> extractCommitIdsFromPullResult(String siteId, Repository repo, PullResult pullResult) {
+        List<String> commitIds = new LinkedList<>();
+        ObjectId[] mergedCommits = pullResult.getMergeResult().getMergedCommits();
+        for (ObjectId mergedCommit : mergedCommits) {
+            try {
+                RevCommit revCommit = repo.parseCommit(mergedCommit);
+                commitIds.addAll(processCommitId(siteId, revCommit));
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
+        }
+        return commitIds;
+    }
+
+    private Set<String> processCommitId(String siteId, RevCommit revCommit) {
+        Set<String> toRet = new HashSet<>();
+        Queue<RevCommit> commitIdsQueue = new LinkedList<>();
+        commitIdsQueue.offer(revCommit);
+        while (!commitIdsQueue.isEmpty()) {
+            RevCommit rc = commitIdsQueue.poll();
+            if (Objects.nonNull(rc)) {
+                String cId = rc.getName();
+                if (!toRet.contains(cId)) {
+                    GitLog gitLog = contentRepositoryV2.getGitLog(siteId, cId);
+                    if (Objects.isNull(gitLog)) {
+                        RevCommit[] parents = rc.getParents();
+                        if (Objects.nonNull(parents) && parents.length > 0) {
+                            for (RevCommit parent : parents) {
+                                commitIdsQueue.offer(parent);
+                            }
+                        }
+                        toRet.add(cId);
+                    }
+                }
+            }
+        }
+        return toRet;
     }
 
     private List<String> extractCommitIdsFromPullResult(String siteId, Repository repo, PullResult pullResult) {
@@ -555,16 +584,15 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
 
     @Override
     public boolean pushToRemote(String siteId, String remoteName, String remoteBranch, boolean force)
-            throws CryptoException, ServiceLayerException, InvalidRemoteUrlException {
+            throws ServiceLayerException, InvalidRemoteUrlException, InvalidRemoteRepositoryCredentialsException,
+                    RemoteRepositoryNotFoundException {
         logger.debug("Get remote data from database for remote " + remoteName + " and site " + siteId);
         RemoteRepository remoteRepository = getRemoteRepository(siteId, remoteName);
 
         logger.debug("Prepare push command.");
-        GitRepositoryHelper helper = GitRepositoryHelper.getHelper(studioConfiguration, securityService,
-                userServiceInternal, encryptor, generalLockService, retryingRepositoryOperationFacade);
-        Repository repo = helper.getRepository(siteId, SANDBOX);
+        Repository repo = gitRepositoryHelper.getRepository(siteId, SANDBOX);
         try (Git git = new Git(repo)) {
-            Iterable<PushResult> pushResultIterable = null;
+            Iterable<PushResult> pushResultIterable;
             PushCommand pushCommand = git.push();
             logger.debug("Set remote " + remoteName);
             pushCommand.setRemote(remoteRepository.getRemoteName());
@@ -574,7 +602,7 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
                     Constants.R_HEADS +  remoteBranch);
             pushCommand.setRefSpecs(r);
             Path tempKey = Files.createTempFile(UUID.randomUUID().toString(), ".tmp");
-            pushCommand = helper.setAuthenticationForCommand(pushCommand, remoteRepository.getAuthenticationType(),
+            gitRepositoryHelper.setAuthenticationForCommand(pushCommand, remoteRepository.getAuthenticationType(),
                     remoteRepository.getRemoteUsername(), remoteRepository.getRemotePassword(),
                     remoteRepository.getRemoteToken(), remoteRepository.getRemotePrivateKey(), tempKey, true);
             pushCommand.setForce(force);
@@ -595,15 +623,18 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
                             logger.error("Remote ref " + remoteRefUpdate.getSrcRef() + " update was rejected, " +
                                     "because remote side doesn't support/allow deleting refs.\n" +
                                     remoteRefUpdate.getMessage());
+                            break;
                         case REJECTED_NONFASTFORWARD:
                             toRet = false;
                             logger.error("Remote ref " + remoteRefUpdate.getSrcRef() + " update was rejected, as it " +
                                     "would cause non fast-forward update.\n" + remoteRefUpdate.getMessage());
+                            break;
                         case REJECTED_REMOTE_CHANGED:
                             toRet = false;
                             logger.error("Remote ref " + remoteRefUpdate.getSrcRef() + " update was rejected, because" +
                                     " old object id on remote repository " + remoteRefUpdate.getRemoteName() +
                                     " wasn't the same as defined expected old object. \n" + remoteRefUpdate.getMessage());
+                            break;
                         case REJECTED_OTHER_REASON:
                             toRet = false;
                             logger.error("Remote ref " + remoteRefUpdate.getSrcRef() + " update was rejected for "
@@ -617,6 +648,10 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
         } catch (InvalidRemoteException e) {
             logger.error("Remote is invalid " + remoteName, e);
             throw new InvalidRemoteUrlException();
+        } catch (TransportException e) {
+            GitUtils.translateException(e, logger, remoteName, remoteRepository.getRemoteUrl(),
+                                        remoteRepository.getRemoteUsername());
+            return false;
         } catch (IOException | JGitInternalException | GitAPIException | CryptoException e) {
             logger.error("Error while pushing to remote " + remoteName + " branch "
                     + remoteBranch + " for site " + siteId, e);
@@ -627,14 +662,13 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
 
     @RetryingOperation
     @Override
-    public boolean removeRemote(String siteId, String remoteName) throws CryptoException, RemoteNotRemovableException {
+    public boolean removeRemote(String siteId, String remoteName) throws RemoteNotRemovableException {
         if (!isRemovableRemote(siteId, remoteName)) {
             throw new RemoteNotRemovableException("Remote repository " + remoteName + " is not removable");
         }
         logger.debug("Remove remote " + remoteName + " from the sandbox repo for the site " + siteId);
-        GitRepositoryHelper helper = GitRepositoryHelper.getHelper(studioConfiguration, securityService,
-                userServiceInternal, encryptor, generalLockService, retryingRepositoryOperationFacade);
-        Repository repo = helper.getRepository(siteId, SANDBOX);
+
+        Repository repo = gitRepositoryHelper.getRepository(siteId, SANDBOX);
         String gitLockKey = SITE_SANDBOX_REPOSITORY_GIT_LOCK.replaceAll(PATTERN_SITE, siteId);
         generalLockService.lock(gitLockKey);
         try (Git git = new Git(repo)) {
@@ -642,24 +676,23 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
             remoteRemoveCommand.setRemoteName(remoteName);
             retryingRepositoryOperationFacade.call(remoteRemoveCommand);
 
-            List<Ref> resultRemoteBranches = git.branchList()
-                    .setListMode(ListBranchCommand.ListMode.REMOTE)
-                    .call();
+            ListBranchCommand listBranchCommand = git.branchList().setListMode(ListBranchCommand.ListMode.REMOTE);
+            List<Ref> resultRemoteBranches = retryingRepositoryOperationFacade.call(listBranchCommand);
 
-            List<String> branchesToDelete = new ArrayList<String>();
+            List<String> branchesToDelete = new ArrayList<>();
             for (Ref remoteBranchRef : resultRemoteBranches) {
                 if (remoteBranchRef.getName().startsWith(Constants.R_REMOTES + remoteName)) {
                     branchesToDelete.add(remoteBranchRef.getName());
                 }
             }
-            if (CollectionUtils.isNotEmpty(branchesToDelete)) {
+            if (isNotEmpty(branchesToDelete)) {
                 DeleteBranchCommand delBranch = git.branchDelete();
                 String[] array = new String[branchesToDelete.size()];
                 delBranch.setBranchNames(branchesToDelete.toArray(array));
                 delBranch.setForce(true);
                 retryingRepositoryOperationFacade.call(delBranch);
             }
-        } catch (GitAPIException  e) {
+        } catch (GitAPIException e) {
             logger.error("Failed to remove remote " + remoteName + " for site " + siteId, e);
             return false;
         } finally {
@@ -667,10 +700,10 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
         }
 
         logger.debug("Remove remote record from database for remote " + remoteName + " and site " + siteId);
-        Map<String, String> params = new HashMap<String, String>();
+        Map<String, String> params = new HashMap<>();
         params.put("siteId", siteId);
         params.put("remoteName", remoteName);
-        remoteRepositoryDao.deleteRemoteRepository(params);
+        retryingDatabaseOperationFacade.deleteRemoteRepository(params);
 
         return true;
     }
@@ -680,26 +713,26 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
         if (StringUtils.startsWith(remoteName, CLUSTER_NODE_REMOTE_NAME_PREFIX)) {
             RemoteRepository remoteRepository = getRemoteRepository(siteId, remoteName);
             List<ClusterMember> clusterMembers = getClusterMembersByRemoteName(remoteName);
-            toRet = !(Objects.isNull(remoteRepository) && CollectionUtils.isNotEmpty(clusterMembers));
+            toRet = !(Objects.isNull(remoteRepository) && isNotEmpty(clusterMembers));
         }
         return toRet;
     }
 
     private List<ClusterMember> getClusterMembersByRemoteName(String remoteName) {
-        Map<String, String> params = new HashMap<String, String>();
+        Map<String, String> params = new HashMap<>();
         params.put("remoteName", remoteName);
         return clusterDao.getMemberByRemoteName(params);
     }
 
     @Override
-    public RepositoryStatus getRepositoryStatus(String siteId) throws CryptoException, ServiceLayerException {
-        GitRepositoryHelper helper = GitRepositoryHelper.getHelper(studioConfiguration, securityService,
-                userServiceInternal, encryptor, generalLockService, retryingRepositoryOperationFacade);
-        Repository repo = helper.getRepository(siteId, SANDBOX);
+    public RepositoryStatus getRepositoryStatus(String siteId)
+            throws ServiceLayerException {
+        Repository repo = gitRepositoryHelper.getRepository(siteId, SANDBOX);
         RepositoryStatus repositoryStatus = new RepositoryStatus();
         logger.debug("Execute git status and return conflicting paths and uncommitted changes");
         try (Git git = new Git(repo)) {
-            Status status = git.status().call();
+            StatusCommand statusCommand = git.status();
+            Status status = retryingRepositoryOperationFacade.call(statusCommand);
             repositoryStatus.setClean(status.isClean());
             repositoryStatus.setConflicting(status.getConflicting());
             repositoryStatus.setUncommittedChanges(status.getUncommittedChanges());
@@ -712,12 +745,12 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
 
     @Override
     public boolean resolveConflict(String siteId, String path, String resolution)
-            throws CryptoException, ServiceLayerException {
-        GitRepositoryHelper helper = GitRepositoryHelper.getHelper(studioConfiguration, securityService,
-                userServiceInternal, encryptor, generalLockService, retryingRepositoryOperationFacade);
-        Repository repo = helper.getRepository(siteId, SANDBOX);
+            throws ServiceLayerException {
+        Repository repo = gitRepositoryHelper.getRepository(siteId, SANDBOX);
         String gitLockKey = SITE_SANDBOX_REPOSITORY_GIT_LOCK.replaceAll(PATTERN_SITE, siteId);
         generalLockService.lock(gitLockKey);
+        ResetCommand resetCommand;
+        CheckoutCommand checkoutCommand;
         try (Git git = new Git(repo)) {
             ResetCommand resetCommand;
             CheckoutCommand checkoutCommand;
@@ -725,22 +758,23 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
                 case "ours" :
                     logger.debug("Resolve conflict using OURS strategy for site " + siteId + " and path " + path);
                     logger.debug("Reset merge conflict in git index");
-                    resetCommand = git.reset().addPath(helper.getGitPath(path));
+                    resetCommand = git.reset().addPath(gitRepositoryHelper.getGitPath(path));
                     retryingRepositoryOperationFacade.call(resetCommand);
                     logger.debug("Checkout content from HEAD of studio repository");
-                    checkoutCommand = git.checkout().addPath(helper.getGitPath(path)).setStartPoint(Constants.HEAD);
+                    checkoutCommand =
+                            git.checkout().addPath(gitRepositoryHelper.getGitPath(path)).setStartPoint(Constants.HEAD);
                     retryingRepositoryOperationFacade.call(checkoutCommand);
                     break;
                 case "theirs" :
                     logger.debug("Resolve conflict using THEIRS strategy for site " + siteId + " and path " + path);
                     logger.debug("Reset merge conflict in git index");
-                    resetCommand = git.reset().addPath(helper.getGitPath(path));
+                    resetCommand = git.reset().addPath(gitRepositoryHelper.getGitPath(path));
                     retryingRepositoryOperationFacade.call(resetCommand);
                     logger.debug("Checkout content from merge HEAD of remote repository");
                     List<ObjectId> mergeHeads = repo.readMergeHeads();
                     ObjectId mergeCommitId = mergeHeads.get(0);
-                    checkoutCommand =
-                            git.checkout().addPath(helper.getGitPath(path)).setStartPoint(mergeCommitId.getName());
+                    checkoutCommand = git.checkout().addPath(gitRepositoryHelper.getGitPath(path))
+                            .setStartPoint(mergeCommitId.getName());
                     retryingRepositoryOperationFacade.call(checkoutCommand);
                     break;
                 default:
@@ -749,12 +783,13 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
 
             if (repo.getRepositoryState() == RepositoryState.MERGING_RESOLVED) {
                 logger.debug("Merge resolved. Check if there are no uncommitted changes (repo is clean)");
-                Status status = git.status().call();
+                StatusCommand statusCommand = git.status();
+                Status status = retryingRepositoryOperationFacade.call(statusCommand);
                 if (!status.hasUncommittedChanges()) {
                     logger.debug("Repository is clean. Committing to complete merge");
                     String userName = securityService.getCurrentUser();
                     User user = userServiceInternal.getUserByIdOrUsername(-1, userName);
-                    PersonIdent personIdent = helper.getAuthorIdent(user);
+                    PersonIdent personIdent = gitRepositoryHelper.getAuthorIdent(user);
                     CommitCommand commitCommand = git.commit()
                             .setAllowEmpty(true)
                             .setMessage("Merge resolved. Repo is clean (no changes)")
@@ -775,26 +810,28 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
 
     @Override
     public DiffConflictedFile getDiffForConflictedFile(String siteId, String path)
-            throws ServiceLayerException, CryptoException {
+            throws ServiceLayerException {
         DiffConflictedFile diffResult = new DiffConflictedFile();
-        GitRepositoryHelper helper = GitRepositoryHelper.getHelper(studioConfiguration, securityService,
-                userServiceInternal, encryptor, generalLockService, retryingRepositoryOperationFacade);
-        Repository repo = helper.getRepository(siteId, SANDBOX);
+        Repository repo = gitRepositoryHelper.getRepository(siteId, SANDBOX);
         try (Git git = new Git(repo)) {
             List<ObjectId> mergeHeads = repo.readMergeHeads();
             ObjectId mergeCommitId = mergeHeads.get(0);
             logger.debug("Get content for studio version of conflicted file " + path + " for site " + siteId);
-            InputStream studioVersionIs = contentRepository.getContentVersion(siteId, path, Constants.HEAD);
-            diffResult.setStudioVersion(IOUtils.toString(studioVersionIs));
+            InputStream studioVersionIs = contentRepositoryV2.getContentByCommitId(siteId, path, Constants.HEAD)
+                                                             .orElseThrow()
+                                                             .getInputStream();
+            diffResult.setStudioVersion(IOUtils.toString(studioVersionIs, UTF_8));
             logger.debug("Get content for remote version of conflicted file " + path + " for site " + siteId);
-            InputStream remoteVersionIs = contentRepository.getContentVersion(siteId, path, mergeCommitId.getName());
-            diffResult.setRemoteVersion(IOUtils.toString(remoteVersionIs));
+            InputStream remoteVersionIs = contentRepositoryV2.getContentByCommitId(siteId, path, mergeCommitId.getName())
+                                                             .orElseThrow()
+                                                             .getInputStream();
+            diffResult.setRemoteVersion(IOUtils.toString(remoteVersionIs, UTF_8));
             ByteArrayOutputStream baos = new ByteArrayOutputStream();
 
             logger.debug("Get diff between studio and remote version of conflicted file " + path + " for site "
                     + siteId);
-            RevTree headTree = helper.getTreeForCommit(repo, Constants.HEAD);
-            RevTree remoteTree = helper.getTreeForCommit(repo, mergeCommitId.getName());
+            RevTree headTree = gitRepositoryHelper.getTreeForCommit(repo, Constants.HEAD);
+            RevTree remoteTree = gitRepositoryHelper.getTreeForCommit(repo, mergeCommitId.getName());
 
             try (ObjectReader reader = repo.newObjectReader()) {
                 CanonicalTreeParser headCommitTreeParser = new CanonicalTreeParser();
@@ -804,7 +841,7 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
 
                 // Diff the two commit Ids
                 DiffCommand diffCommand = git.diff()
-                        .setPathFilter(PathFilter.create(helper.getGitPath(path)))
+                        .setPathFilter(PathFilter.create(gitRepositoryHelper.getGitPath(path)))
                         .setOldTree(headCommitTreeParser)
                         .setNewTree(remoteCommitTreeParser)
                         .setOutputStream(baos);
@@ -821,27 +858,27 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
     }
 
     @Override
-    public boolean commitResolution(String siteId, String commitMessage) throws CryptoException, ServiceLayerException {
-        GitRepositoryHelper helper = GitRepositoryHelper.getHelper(studioConfiguration, securityService,
-                userServiceInternal, encryptor, generalLockService, retryingRepositoryOperationFacade);
-        Repository repo = helper.getRepository(siteId, SANDBOX);
+    public boolean commitResolution(String siteId, String commitMessage)
+            throws ServiceLayerException {
+        Repository repo = gitRepositoryHelper.getRepository(siteId, SANDBOX);
         logger.debug("Commit resolution for merge conflict for site " + siteId);
         String gitLockKey = SITE_SANDBOX_REPOSITORY_GIT_LOCK.replaceAll(PATTERN_SITE, siteId);
         generalLockService.lock(gitLockKey);
         try (Git git = new Git(repo)) {
-            Status status = git.status().call();
+            StatusCommand statusCommand = git.status();
+            Status status = retryingRepositoryOperationFacade.call(statusCommand);
 
             logger.debug("Add all uncommitted changes/files");
             AddCommand addCommand = git.add();
-            for (String uncommited : status.getUncommittedChanges()) {
-                addCommand.addFilepattern(uncommited);
+            for (String uncommitted : status.getUncommittedChanges()) {
+                addCommand.addFilepattern(uncommitted);
             }
             retryingRepositoryOperationFacade.call(addCommand);
             logger.debug("Commit changes");
             CommitCommand commitCommand = git.commit();
             String userName = securityService.getCurrentUser();
             User user = userServiceInternal.getUserByIdOrUsername(-1, userName);
-            PersonIdent personIdent = helper.getAuthorIdent(user);
+            PersonIdent personIdent = gitRepositoryHelper.getAuthorIdent(user);
             String prologue = studioConfiguration.getProperty(REPO_COMMIT_MESSAGE_PROLOGUE);
             String postscript = studioConfiguration.getProperty(REPO_COMMIT_MESSAGE_POSTSCRIPT);
 
@@ -865,11 +902,9 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
     }
 
     @Override
-    public boolean cancelFailedPull(String siteId) throws ServiceLayerException, CryptoException {
+    public boolean cancelFailedPull(String siteId) throws ServiceLayerException {
         logger.debug("To cancel failed pull, reset hard needs to be executed");
-        GitRepositoryHelper helper = GitRepositoryHelper.getHelper(studioConfiguration, securityService,
-                userServiceInternal, encryptor, generalLockService, retryingRepositoryOperationFacade);
-        Repository repo = helper.getRepository(siteId, SANDBOX);
+        Repository repo = gitRepositoryHelper.getRepository(siteId, SANDBOX);
         String gitLockKey = SITE_SANDBOX_REPOSITORY_GIT_LOCK.replaceAll(PATTERN_SITE, siteId);
         generalLockService.lock(gitLockKey);
         try (Git git = new Git(repo)) {
@@ -884,16 +919,10 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
         return true;
     }
 
-    private boolean conflictNotificationEnabled() {
-        return Boolean.parseBoolean(
-                studioConfiguration.getProperty(REPO_PULL_FROM_REMOTE_CONFLICT_NOTIFICATION_ENABLED));
-    }
-
     @Override
-    public boolean unlockRepository(String siteId, GitRepositories repositoryType) throws CryptoException {
+    public boolean unlockRepository(String siteId, GitRepositories repositoryType) {
         boolean toRet = false;
-        GitRepositoryHelper helper = getHelper();
-        Repository repo = helper.getRepository(siteId, repositoryType);
+        Repository repo = gitRepositoryHelper.getRepository(siteId, repositoryType);
         if (Objects.nonNull(repo)) {
             toRet = FileUtils.deleteQuietly(Paths.get(repo.getDirectory().getAbsolutePath(), LOCK_FILE).toFile());
         }
@@ -901,9 +930,8 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
     }
 
     @Override
-    public boolean isCorrupted(String siteId, GitRepositories repositoryType) throws CryptoException, ServiceLayerException {
-        GitRepositoryHelper helper = getHelper();
-        Repository repository = helper.getRepository(siteId, repositoryType);
+    public boolean isCorrupted(String siteId, GitRepositories repositoryType) throws ServiceLayerException {
+        Repository repository = gitRepositoryHelper.getRepository(siteId, repositoryType);
         if (repository == null) {
             throw new SiteNotFoundException();
         }
@@ -921,9 +949,8 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
     }
 
     @Override
-    public void repairCorrupted(String siteId, GitRepositories repositoryType) throws CryptoException, ServiceLayerException {
-        GitRepositoryHelper helper = getHelper();
-        Repository repository = helper.getRepository(siteId, repositoryType);
+    public void repairCorrupted(String siteId, GitRepositories repositoryType) throws ServiceLayerException {
+        Repository repository = gitRepositoryHelper.getRepository(siteId, repositoryType);
         if (repository == null) {
             throw new SiteNotFoundException();
         }
@@ -940,9 +967,69 @@ public class RepositoryManagementServiceInternalImpl implements RepositoryManage
         }
     }
 
-    protected GitRepositoryHelper getHelper() throws CryptoException {
-        return GitRepositoryHelper.getHelper(studioConfiguration, securityService,
-                userServiceInternal, encryptor, generalLockService, retryingRepositoryOperationFacade);
+    private boolean conflictNotificationEnabled() {
+        return Boolean.parseBoolean(
+                studioConfiguration.getProperty(REPO_PULL_FROM_REMOTE_CONFLICT_NOTIFICATION_ENABLED));
     }
 
+    public void setRemoteRepositoryDao(RemoteRepositoryDAO remoteRepositoryDao) {
+        this.remoteRepositoryDao = remoteRepositoryDao;
+    }
+
+    public void setStudioConfiguration(StudioConfiguration studioConfiguration) {
+        this.studioConfiguration = studioConfiguration;
+    }
+
+    public void setNotificationService(NotificationService notificationService) {
+        this.notificationService = notificationService;
+    }
+
+    public void setSecurityService(SecurityService securityService) {
+        this.securityService = securityService;
+    }
+
+    public void setUserServiceInternal(UserServiceInternal userServiceInternal) {
+        this.userServiceInternal = userServiceInternal;
+    }
+
+    public void setContentRepository(org.craftercms.studio.api.v1.repository.ContentRepository contentRepository) {
+        this.contentRepository = contentRepository;
+    }
+
+    public void setEncryptor(TextEncryptor encryptor) {
+        this.encryptor = encryptor;
+    }
+
+
+    public void setClusterDao(ClusterDAO clusterDao) {
+        this.clusterDao = clusterDao;
+    }
+
+    public void setGeneralLockService(GeneralLockService generalLockService) {
+        this.generalLockService = generalLockService;
+    }
+
+    public void setSiteService(SiteService siteService) {
+        this.siteService = siteService;
+    }
+
+    public void setGitRepositoryHelper(GitRepositoryHelper gitRepositoryHelper) {
+        this.gitRepositoryHelper = gitRepositoryHelper;
+    }
+
+    public void setContentRepositoryV2(ContentRepository contentRepositoryV2) {
+        this.contentRepositoryV2 = contentRepositoryV2;
+    }
+
+    public void setBatchSizeGitLog(int batchSizeGitLog) {
+        this.batchSizeGitLog = batchSizeGitLog;
+    }
+
+    public void setRetryingRepositoryOperationFacade(RetryingRepositoryOperationFacade retryingRepositoryOperationFacade) {
+        this.retryingRepositoryOperationFacade = retryingRepositoryOperationFacade;
+    }
+
+    public void setRetryingDatabaseOperationFacade(RetryingDatabaseOperationFacade retryingDatabaseOperationFacade) {
+        this.retryingDatabaseOperationFacade = retryingDatabaseOperationFacade;
+    }
 }
